--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header><h1>Git базовые команды</h1></header>
     <main>
         <div>
-            <p>Базовые команды</p>
+            <p>Базовые команды:</p>
             <ul>
                 <li>git clone адрес репозитория - клонировать репозиторий на локальный компютер
                 </li>
@@ -22,7 +22,7 @@
                 </li>
             </ul>
         </div>
-        <div><p>Окат изменений</p>
+        <div><p>Окат изменений:</p>
             <ul>
                 <li>git pull - скачивается актуальная версия удаленного репозитория и все изменения применяются к локальному репозиторию
                 </li>
