--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
                 </li>
             </ul>
         </div>
+        <div>
+            <p>Pабота с ветками</p>
+            <ul>
+                <li>merge - сначала подтягиваем в свою ветку из master все изменения
+                </li>
+                <li>merge - потом тестируем и делаем слияние переходим (checkout) в master и применяем (merge) все изменения из нашей ветки
+                </li>
+            </ul>
+        </div>
     </main>
     <footer>
         <nav><a href="gallery.html">next</a></nav>
