--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header><h1>Butterflies</h1></header>
+    <header><h1>"Butterflies"</h1></header>
     <main>
         <img src="imges/12a-butterfly_wallpaper.jpeg" alt="12a-butterfly_wallpaper">
         <img src="imges/images.jpeg" alt="images.jpeg">
