--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div><p>Окат изменений:</p>
             <ul>
-                <li>git pull - скачивается актуальная версия удаленного репозитория и все изменения применяются к локальному репозиторию
+                <li>git pull - скачивается актуальная версия удаленного репозитория и все изменения ,будут применены к локальному репозиторию
                 </li>
                 <li>checkout - перейти в другую ветку
                 </li>
